--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,9 +67,10 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.4.1')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    // 파이어베이스 로그인 설정
     implementation 'com.google.firebase:firebase-auth-ktx'
-    //구글 로그인 지원
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
