--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,51 +12,43 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Fashionista">
+
         <activity
             android:name=".view.login.JoinActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="nosensor" />
+
         <activity
             android:name=".view.login.LoginActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="nosensor" />
+
         <activity
             android:name=".view.login.IntroActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="nosensor">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".view.main.home.ClothesMoreActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="nosensor" />
+
         <activity
             android:name=".view.main.home.ClothesDetailActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="nosensor" />
         <activity
             android:name=".view.main.HomeActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="nosensor" />
 
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
-
-        <activity
-            android:name="com.facebook.FacebookActivity"
-            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name" />
-        <activity
-            android:name="com.facebook.CustomTabActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:scheme="@string/fb_login_protocol_scheme" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
